CAC_40_Short_Term Volatility_Forecasting.ipynb

--- a/CAC_40_Short_Term Volatility_Forecasting.ipynb
+++ b/CAC_40_Short_Term Volatility_Forecasting.ipynb
@@ -941,7 +941,7 @@
     "2. Non-linear feature interactions (multi-horizon alignment matters)\n",
     "3. Robustness via ensemble diversification\n",
     "\n",
-    "However, the modest improvement (+10-20%) suggests **GARCH remains the industry standard for good reason**: it's simple, interpretable, fast, and captures 95%+ of predictable volatility dynamics.\n"
+    "However, the modest improvement suggests **GARCH remains the industry standard for good reason**: it's simple, interpretable, fast, and captures 95%+ of predictable volatility dynamics.\n"
    ]
   }
  ],
